src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ADDRESS__c</fullName>
        <label>MMD Address</label>
        <length>126</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Name__c</fullName>
        <description>Used to track alternate name. Contains Kanji values</description>
        <encrypted>true</encrypted>
        <label>Alternate Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRD__c</fullName>
        <description>Tracks Firm/Office CRD Number</description>
        <label>CRD #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Trakcs Organization Channel</description>
        <label>Channel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Reporting_Currency__c</fullName>
        <description>Used for GDM currency toggle - User to manually set this</description>
        <inlineHelpText>Drives client currency in Sales and Asset widget</inlineHelpText>
        <label>Client Reporting Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Reporting_Division__c</fullName>
        <label>Client Reporting Division</label>
        <picklist>
            <picklistValues>
                <fullName>Asia X-Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia &amp; New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe X-UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFSI-Meridian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid East &amp; Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK &amp; Ireland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complex_Area__c</fullName>
        <label>Complex/Area</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides Orgnaization from anyone but  Coverage Team</description>
        <inlineHelpText>Is this a Confidential Client?</inlineHelpText>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Type__c</fullName>
        <description>Tracks ability of field to be mentioned outside</description>
        <label>Confidentiality</label>
        <picklist>
            <picklistValues>
                <fullName>Confidential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Restrictions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Confidentiality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client List Allowed, Press Relea</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Tracks country code for downstream systems</description>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Level_Code__c</fullName>
        <description>Used for downstream systems</description>
        <label>Distribution Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Level__c</fullName>
        <description>Tracks Distribution Channel for ICM</description>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Global Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLOBAL INSTITUTIONALINSTITUTIONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLOBAL INSTITUTIONALUS RETAILINSTITUTIONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global INSTUTITIONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalUS RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSTITUTIONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSTITUTIONAL RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAMAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-US RETAILINSTITUTIONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SONKIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUTIONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUTIONALUS-RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US RETAIL RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US RETAILHARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US RETAILS RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Retail, Non-US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Retail1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Distribution_Sub_Channel__c</fullName>
        <description>Tracks subchannel for for ICM</description>
        <label>Distribution Sub Channel</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA PAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity_Status__c</fullName>
        <description>Tracks Active/Inactive Orgs</description>
        <label>Entity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Firm_Office__c</fullName>
        <description>Denotes whether an office is a firm or an office</description>
        <label>Firm/Office Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Maps__c</fullName>
        <description>Used for Google Maps icon to quickly ge to address</description>
        <formula>HYPERLINK(&quot;http://maps.google.com/?q=&quot; &amp;SUBSTITUTE(ShippingStreet,SUBSTITUTE($Label.Linebreak,&quot;-&quot;,&quot;&quot;),&quot; &quot;) &amp; &quot;+&quot; &amp;ShippingCity&amp; &quot;+&quot; &amp;ShippingState&amp; &quot;+&quot; &amp;ShippingPostalCode , IMAGE(&quot;/resource/GoogleMapsIcon&quot;, &quot;&quot;, 45, 45))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Maps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INTERNET__c</fullName>
        <description>MMD Field</description>
        <label>MMD Internet</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InSituCah__Ultimate_Parent_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ultimate Parent Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InSituCah__Ultimate_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Parent</label>
        <referenceTo>InSituCah__Ultimate_Parent__c</referenceTo>
        <relationshipLabel>Ultimate Parent</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry_Subtype__c</fullName>
        <description>Tracks a sub-type for organization</description>
        <label>Industry Subtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institutional_Tier__c</fullName>
        <description>Tracks Plat, Gold, Silver or Bronze for an Organization</description>
        <label>Institutional Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze - NDS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internet_Set_Up_For_Account__c</fullName>
        <description>This field will be visible only for CSM&apos;s, RM&apos;s.</description>
        <label>Internet Set Up For Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsCompetitor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for MDM</description>
        <label>IsCompetitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsConsultant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for MDM</description>
        <label>IsConsultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Japan_Org_ID__c</fullName>
        <label>Japan Org ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_MMD_Data_Load__c</fullName>
        <description>MMD Field</description>
        <label>Last MMD Data Load</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MAILADD__c</fullName>
        <description>MMD Field</description>
        <label>MMD Mailing Address</label>
        <length>114</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <description>MDM ID Field</description>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMD_CITY__c</fullName>
        <description>MMD Field</description>
        <label>MMD City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_COUNTRY__c</fullName>
        <description>MMD Field</description>
        <label>MMD Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Category__c</fullName>
        <description>MMD Field</description>
        <label>MMD Category</label>
        <picklist>
            <picklistValues>
                <fullName>Consultant Branch Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant Main Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant Regional Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Service Organizations-for profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Service Organizations-nonprofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Foundations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserve Banks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sovereign Wealth Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unions</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MMD_ID__c</fullName>
        <description>MMD Field</description>
        <externalId>true</externalId>
        <label>MMD ID</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMD_Info_Chg_By__c</fullName>
        <description>MMD Field</description>
        <label>MMD Info Chg By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Info_Chg__c</fullName>
        <description>MMD Field</description>
        <label>MMD Info Chg</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMD_NAME__c</fullName>
        <description>MMD Field</description>
        <label>MMD Firm Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_PHONE__c</fullName>
        <description>MMD Field</description>
        <label>MMD Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MMD_State_Prov__c</fullName>
        <description>MMD Field</description>
        <formula>CASE( STATE__c ,
&quot;AB&quot;,&quot;Alberta&quot;,
&quot;AK&quot;,&quot;Alaska&quot;,
&quot;AL&quot;,&quot;Alabama&quot;,
&quot;ALB&quot;,&quot;Alberta&quot;,
&quot;AR&quot;,&quot;Arkansas&quot;,
&quot;AZ&quot;,&quot;Arizona&quot;,
&quot;BC&quot;,&quot;British Columbia&quot;,
&quot;CA&quot;,&quot;California&quot;,
&quot;CO&quot;,&quot;Colorado&quot;,
&quot;CT&quot;,&quot;Connecticut&quot;,
&quot;DC&quot;,&quot;District of Columbia&quot;,
&quot;DE&quot;,&quot;Delaware&quot;,
&quot;FL&quot;,&quot;Florida&quot;,
&quot;GA&quot;,&quot;Georgia&quot;,
&quot;GU&quot;,&quot;Guam&quot;,
&quot;HI&quot;,&quot;Hawaii&quot;,
&quot;IA&quot;,&quot;Iowa&quot;,
&quot;ID&quot;,&quot;Idaho&quot;,
&quot;IL&quot;,&quot;Illinois&quot;,
&quot;IN&quot;,&quot;Indiana&quot;,
&quot;KS&quot;,&quot;Kansas&quot;,
&quot;KY&quot;,&quot;Kentucky&quot;,
&quot;LA&quot;,&quot;Louisiana&quot;,
&quot;MA&quot;,&quot;Massachusetts&quot;,
&quot;MB&quot;,&quot;Manitoba&quot;,
&quot;MD&quot;,&quot;Maryland&quot;,
&quot;ME&quot;,&quot;Maine&quot;,
&quot;MI&quot;,&quot;Michigan&quot;,
&quot;MN&quot;,&quot;Minnesota&quot;,
&quot;MO&quot;,&quot;Missouri&quot;,
&quot;MS&quot;,&quot;Mississippi&quot;,
&quot;MT&quot;,&quot;Montana&quot;,
&quot;NB&quot;,&quot;New Brunswick&quot;,
&quot;NC&quot;,&quot;North Carolina&quot;,
&quot;ND&quot;,&quot;North Dakota&quot;,
&quot;NE&quot;,&quot;Nebraska&quot;,
&quot;NH&quot;,&quot;New Hampshire&quot;,
&quot;NJ&quot;,&quot;New Jersey&quot;,
&quot;NL&quot;,&quot;Newfoundland and Labrador&quot;,
&quot;NM&quot;,&quot;New Mexico&quot;,
&quot;NS&quot;,&quot;Nova Scotia&quot;,
&quot;NT&quot;,&quot;Northwest Territories&quot;,
&quot;NU&quot;,&quot;Nanavut&quot;,
&quot;NV&quot;,&quot;Nevada&quot;,
&quot;NY&quot;,&quot;New York&quot;,
&quot;OH&quot;,&quot;Ohio&quot;,
&quot;OK&quot;,&quot;Oklahoma&quot;,
&quot;ON&quot;,&quot;Ontario&quot;,
&quot;ONT&quot;,&quot;Ontario&quot;,
&quot;OR&quot;,&quot;Oregon&quot;,
&quot;PA&quot;,&quot;Pennsylvania&quot;,
&quot;PE&quot;,&quot;Prince Edward Island&quot;,
&quot;PR&quot;,&quot;Puerto Rico&quot;,
&quot;VI&quot;,&quot;US Virgin Islands&quot;,
&quot;QC&quot;,&quot;Quebec&quot;,
&quot;QE&quot;,&quot;Quebec&quot;,
&quot;RI&quot;,&quot;Rhode Island&quot;,
&quot;SA&quot;,&quot;Saskatchewan&quot;,
&quot;SC&quot;,&quot;South Carolina&quot;,
&quot;SD&quot;,&quot;South Dakota&quot;,
&quot;SK&quot;,&quot;Saskatchewan&quot;,
&quot;TN&quot;,&quot;Tennessee&quot;,
&quot;TX&quot;,&quot;Texas&quot;,
&quot;UT&quot;,&quot;Utah&quot;,
&quot;VA&quot;,&quot;Virginia&quot;,
&quot;VT&quot;,&quot;Vermont&quot;,
&quot;WA&quot;,&quot;Washington&quot;,
&quot;WI&quot;,&quot;Wisconsin&quot;,
&quot;WV&quot;,&quot;West Virginia&quot;,
&quot;WY&quot;,&quot;Wyoming&quot;,
&quot;YT&quot;,&quot;Yukon Territories&quot;, STATE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMD State/Prov</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_WebAccess_Link__c</fullName>
        <description>MMD Field</description>
        <formula>IF( AND(LEN(MMD_ID__c) =0,  RecordType.DeveloperName =&quot;Client/Prospect&quot;),HYPERLINK(&quot;http://products.mmdwebaccess.com/member/M_Frame.aspx?selSiteType=1&amp;firmName=&quot;&amp; LEFT(Name,10) ,&apos;Click Here&apos;),

IF( AND(LEN(MMD_ID__c) =0,RecordType.DeveloperName =&quot;Investment Consultant&quot;),HYPERLINK(&quot;http://products.mmdwebaccess.com/member/M_Frame.aspx?selSiteType=2&amp;firmName=&quot;&amp; LEFT(Name,10) ,&apos;Click Here&apos;),

IF(  RecordType.DeveloperName  =&quot;Investment Consultant&quot;, 
HYPERLINK(&quot;http://products.mmdwebaccess.com/member/MC_Profile.aspx?ids=&quot; &amp; MMD_ID__c ,&apos;Click Here&apos;), 
 
HYPERLINK(&quot;http://products.mmdwebaccess.com/member/CompGenInfo.aspx?ids=&quot; &amp; MMD_ID__c ,&apos;Click Here&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMD WebAccess Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Attention__c</fullName>
        <description>Mailing Address field</description>
        <encrypted>true</encrypted>
        <label>Mailing Attention</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Superfluous__c</fullName>
        <label>Mailing Superfluous</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Permissions__c</fullName>
        <description>Tracks ability to mention client outside of MFS</description>
        <label>Marketing Permissions</label>
        <picklist>
            <picklistValues>
                <fullName>Client List with Permission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference with Permission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Survey Participation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>No_Direct_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks if MFS provides service to client or not.</description>
        <label>No Direct Service?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_US_Retail_Tier__c</fullName>
        <description>Tracks Platinum, Gold, Silver, Bronze, or unassigned for Non-US Retail Tier</description>
        <label>Non-US Retail Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notification_Clause__c</fullName>
        <label>Notification Clause</label>
        <picklist>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code of Ethics Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Organization_Registered_Country__c</fullName>
        <description>Tracks registered country for reporting</description>
        <label>Organization Registered Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Sub_Type__c</fullName>
        <description>Reference data sub-type Organization</description>
        <label>Organization Sub -Type</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Actuary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Broker Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearing Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custody Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiduciary Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual/ Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lending Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Authority (state, city, municipal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orphan Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Bank</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <description>Not on Page</description>
        <label>Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principles_for_Responsible_Investment__c</fullName>
        <label>Principles for Responsible Investment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Print_Name__c</fullName>
        <description>Reporting Print Name as preferred by client</description>
        <label>Print Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Date__c</fullName>
        <description>Last data refresh date</description>
        <label>Refresh Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Rating__c</fullName>
        <description>AML field</description>
        <label>Risk Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STATE_INTL__c</fullName>
        <description>MMD Field</description>
        <label>MMD Int&apos;l State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <description>MMD Field</description>
        <label>MMD State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <description>Denotes client or prospect</description>
        <label>Sales Status</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ABC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saleslogix_ID__c</fullName>
        <description>SLX ID</description>
        <label>Saleslogix ID</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>